chore(renovate): add labels for major GitHub Actions updates
Add a new package rule to automatically label major GitHub Actions
dependency updates with 'dependency' and 'github-actions' labels.
This improves PR organization and makes it easier to identify and
review major version updates for GitHub Actions workflows.

--- a/renovate.json
+++ b/renovate.json
@@ -22,6 +22,11 @@
       "matchManagers": ["gomod"],
       "matchUpdateTypes": ["major"],
       "addLabels": ["dependency", "major"]
+    },
+    {
+      "matchManagers": ["github-actions"],
+      "addLabels": ["dependency", "github-actions"],
+      "matchUpdateTypes": ["major"]
     }
   ]
 }
